--- a/Xero/Xero.vcxproj
+++ b/Xero/Xero.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="src\Xero\Core\Assert.h" />
     <ClInclude Include="src\Xero\Core\Core.h" />
     <ClInclude Include="src\Xero\Core\Entrypoint.h" />
+    <ClInclude Include="src\Xero\Core\Input.h" />
     <ClInclude Include="src\Xero\Core\KeyCodes.h" />
     <ClInclude Include="src\Xero\Core\Layer.h" />
     <ClInclude Include="src\Xero\Core\LayerStack.h" />
@@ -182,6 +183,7 @@
     <ClCompile Include="src\Xero\Platform\Vulkan\VulkanDevice.cpp" />
     <ClCompile Include="src\Xero\Platform\Vulkan\VulkanImGuiLayer.cpp" />
     <ClCompile Include="src\Xero\Platform\Vulkan\VulkanSwapchain.cpp" />
+    <ClCompile Include="src\Xero\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Xero\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\Xero\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Xero\Renderer\RendererAPI.cpp" />
