--- a/Xero/Xero.vcxproj
+++ b/Xero/Xero.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>xopch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>XO_PLATFORM_WINDOWS;XO_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;src;vendor\GLFW\include;vendor\ImGui;vendor\Vulkan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;src;vendor\GLFW\include;vendor\ImGui;vendor\Vulkan\Include;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp20</LanguageStandard>
@@ -97,7 +97,7 @@
       <PrecompiledHeaderFile>xopch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>XO_PLATFORM_WINDOWS;XO_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;src;vendor\GLFW\include;vendor\ImGui;vendor\Vulkan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;src;vendor\GLFW\include;vendor\ImGui;vendor\Vulkan\Include;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -121,7 +121,7 @@
       <PrecompiledHeaderFile>xopch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>XO_PLATFORM_WINDOWS;XO_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>vendor\spdlog\include;src;vendor\GLFW\include;vendor\ImGui;vendor\Vulkan\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>vendor\spdlog\include;src;vendor\GLFW\include;vendor\ImGui;vendor\Vulkan\Include;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -145,12 +145,14 @@
     <ClInclude Include="src\Xero\Core\Assert.h" />
     <ClInclude Include="src\Xero\Core\Core.h" />
     <ClInclude Include="src\Xero\Core\Entrypoint.h" />
+    <ClInclude Include="src\Xero\Core\Hash.h" />
     <ClInclude Include="src\Xero\Core\Input.h" />
     <ClInclude Include="src\Xero\Core\KeyCodes.h" />
     <ClInclude Include="src\Xero\Core\Layer.h" />
     <ClInclude Include="src\Xero\Core\LayerStack.h" />
     <ClInclude Include="src\Xero\Core\Log.h" />
     <ClInclude Include="src\Xero\Core\Ref.h" />
+    <ClInclude Include="src\Xero\Core\Timestep.h" />
     <ClInclude Include="src\Xero\Core\Window.h" />
     <ClInclude Include="src\Xero\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Xero\Events\Event.h" />
@@ -162,32 +164,39 @@
     <ClInclude Include="src\Xero\Platform\Vulkan\VulkanContext.h" />
     <ClInclude Include="src\Xero\Platform\Vulkan\VulkanDevice.h" />
     <ClInclude Include="src\Xero\Platform\Vulkan\VulkanImGuiLayer.h" />
+    <ClInclude Include="src\Xero\Platform\Vulkan\VulkanShader.h" />
     <ClInclude Include="src\Xero\Platform\Vulkan\VulkanSwapchain.h" />
     <ClInclude Include="src\Xero\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\Xero\Renderer\Renderer.h" />
     <ClInclude Include="src\Xero\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Xero\Renderer\RendererContext.h" />
+    <ClInclude Include="src\Xero\Renderer\Shader.h" />
+    <ClInclude Include="src\Xero\Renderer\ShaderUniform.h" />
     <ClInclude Include="src\Xero\Utils\StringUtils.h" />
     <ClInclude Include="src\xopch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Xero\Core\Application.cpp" />
+    <ClCompile Include="src\Xero\Core\Hash.cpp" />
     <ClCompile Include="src\Xero\Core\Layer.cpp" />
     <ClCompile Include="src\Xero\Core\LayerStack.cpp" />
     <ClCompile Include="src\Xero\Core\Log.cpp" />
     <ClCompile Include="src\Xero\Core\Ref.cpp" />
+    <ClCompile Include="src\Xero\Core\Timestep.cpp" />
     <ClCompile Include="src\Xero\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Xero\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Xero\Platform\Vulkan\VulkanAllocator.cpp" />
     <ClCompile Include="src\Xero\Platform\Vulkan\VulkanContext.cpp" />
     <ClCompile Include="src\Xero\Platform\Vulkan\VulkanDevice.cpp" />
     <ClCompile Include="src\Xero\Platform\Vulkan\VulkanImGuiLayer.cpp" />
+    <ClCompile Include="src\Xero\Platform\Vulkan\VulkanShader.cpp" />
     <ClCompile Include="src\Xero\Platform\Vulkan\VulkanSwapchain.cpp" />
     <ClCompile Include="src\Xero\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Xero\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\Xero\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Xero\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Xero\Renderer\RendererContext.cpp" />
+    <ClCompile Include="src\Xero\Renderer\Shader.cpp" />
     <ClCompile Include="src\Xero\Utils\StringUtils.cpp" />
     <ClCompile Include="src\xopch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
